--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^16.1.8",
+    "bcrypt": "^3.0.7",
     "express": "^4.17.1",
     "mongoose": "^5.8.1"
   }
